spring-cloud-kubernetes-sample/manifest/deploy/sample-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: kube-app
  name: kube-app
  namespace: yunlong
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: kube-app
  type: LoadBalancer
